<resources>
    <string name="app_name">FoodComillanca</string>

    <string name="food">FoodComillança</string>
    <string name="usuario">Usuário</string>
    <string name="password">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="esqueci">Esqueci minha senha</string>
    <string name="cadastro">Cadastre-se</string>

    <string name="digiteEmail">Digite Seu Email</string>
    <string name="novaSenha">Nova Senha</string>

    <string name="novaConta">Nova Conta</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">Cadastrar</string>

    <string name="success">Sucesso!</string>
    <string name="ops">Ops</string>
    <string name="message_invalid_user">Usuário ou senha inválidos</string>
    <string name="ok">Ok</string>
    <string name="generic_login">Estamos com problemas para responder o seu login. Tente novamente mais tarde.</string>
    <string name="generic_register">Não conseguimos criar a sua conta. Tente novamente mais tarde.</string>
    <string name="success_register">Não conseguimos criar a sua conta. Tente novamente mais tarde.</string>
    <string name="same_password">As senhas precisam ser iguais</string>
    <string name="confirmpassword">Confirmar senha</string>


    <string name="tenteNovamente">Tente novamente mais tarde!</string>
    <string name="usuarioInvalido">Usuário ou senha inválida!</string>
    <string name="erroTenteNovamente">Erro tente novamente!</string>
    <string name="erroTenteNovamentesevero">Erro tente novamente!!!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
