<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.NovaContaActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_weight="4.5"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/hamburguer"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:src="@drawable/hamburger_icon"
            android:layout_margin="10dp"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:textSize="33sp"
            android:layout_toRightOf="@id/hamburguer"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="20dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/novaConta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/novaConta"
            android:textSize="22sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/textNome"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/novaConta"
            />

        <EditText
            android:id="@+id/editNome"
            android:inputType="text"
            android:layout_below="@id/textNome"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <TextView
            android:id="@+id/textSobrenome"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/sobrenome"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_below="@+id/novaConta"
            android:layout_toRightOf="@id/textNome"

            />

        <EditText
            android:id="@+id/editSobrenome"
            android:inputType="text"
            android:layout_below="@id/textSobrenome"
            android:layout_toRightOf="@id/editNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            />

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/editSobrenome"
            />

        <EditText
            android:id="@+id/editEmail"
            android:inputType="textEmailAddress"
            android:layout_below="@id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <TextView
            android:id="@+id/textSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senha"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/editEmail"
            />

        <EditText
            android:id="@+id/editSenha"
            android:inputType="textPassword"
            android:layout_below="@id/textSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <TextView
            android:id="@+id/textconfirm"
            android:layout_below="@id/editSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmpassword"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <EditText
            android:layout_below="@id/textconfirm"
            android:inputType="textPassword"
            android:id="@+id/confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <Button
            android:id="@+id/btnCadastrar"
            android:background="@color/colorHamburguerPao"
            android:layout_below="@id/confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"

            />



    </RelativeLayout>


</LinearLayout>