<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cotemig.com.br.foodcomillanca.ui.activities.MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_weight="0.9"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/hamburguer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hamburger_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:textSize="33sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/hamburguer"
            android:layout_marginTop="10dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario"

            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            />

        <EditText
            android:inputType="textEmailAddress"
            android:layout_below="@id/textUsuario"
            android:id="@+id/editUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            />

        <TextView
            android:id="@+id/senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_below="@id/editUsuario"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/senhaEdit"
            android:layout_below="@id/senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>


        <Button
            android:id="@+id/btnEntrar"
            android:layout_below="@id/senhaEdit"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/entrar"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="3dp"
            android:background="@color/colorHamburguerPao"
            />

        <Button
            android:background="@color/colorHamburguerPao"
            android:id="@+id/btnEsqueci"
            android:layout_below="@id/senhaEdit"
            android:layout_toRightOf="@id/btnEntrar"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/esqueci"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btnCadastrese"
            android:background="@color/colorHamburguerPao"
            android:layout_below="@id/btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"/>





    </RelativeLayout>



</LinearLayout>
